--- a/SimpleWebBrowser161019/app/src/main/AndroidManifest.xml
+++ b/SimpleWebBrowser161019/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lhj.simplewebbrowser161019">
 
+    <!-- 인터넷 권한 부여 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
