--- a/Activities161123/app/src/main/AndroidManifest.xml
+++ b/Activities161123/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/activityMain">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +20,9 @@
         <activity
             android:name=".SecondActivity"
             android:label="@string/activitySecond" />
+        <activity
+            android:name=".ThirdActivity"
+            android:label="@string/activityThird" />
     </application>
 
 </manifest>
